# graylog-cli

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.cargo/: config.toml
.claude/skills/release/: SKILL.md
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml  release.yml
benches/: json_normalization.rs  timerange_parsing.rs
skills/graylog-cli/: SKILL.md
src/: main.rs
src/application/: mod.rs  service.rs  test_support.rs  updater_service.rs
src/application/ports/: cache_store.rs  config_store.rs  graylog_gateway.rs  mod.rs  updater.rs
src/domain/: config.rs  error.rs  mod.rs  models.rs  timerange.rs
src/infrastructure/: config_store.rs  graylog_client.rs  mod.rs  updater.rs
src/presentation/: cli.rs  output.rs
tests/: cli_integration.rs
