[package]
name = "graylog-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
exn = "0.3"
humantime = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1"
time = { version = "0.3", features = ["parsing", "formatting"] }
url = { version = "2", features = ["serde"] }
