[package]
name = "graylog-cli"
version = "0.0.3-alpha"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
exn = "0.3"
humantime = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
secrecy = { version = "0.10", features = ["serde"] }
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1"
time = { version = "0.3", features = ["parsing", "formatting"] }
url = { version = "2", features = ["serde"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
